    attach themselves to their parent table automatically
    when they refer to a Table-bound Column object directly
    (i.e. not just string column name), and refer to
    one and only one Table.   Prior to 0.8 this behavior
    occurred for UniqueConstraint and PrimaryKeyConstraint,
    but not ForeignKeyConstraint or CheckConstraint.
    [ticket:2410]

  - [bug] column.label(None) now produces an
    anonymous label, instead of returning the
    column object itself, consistent with the behavior
    of label(column, None).  [ticket:2168]

  - [feature] An explicit error is raised when
    a ForeignKeyConstraint() that was
    constructed to refer to multiple remote tables
    is first used. [ticket:2455]

- access
  - [feature] the MS Access dialect has been
    moved to its own project on Bitbucket,
    taking advantage of the new SQLAlchemy
    dialect compliance suite.   The dialect is
    still in very rough shape and probably not
    ready for general use yet, however
    it does have *extremely* rudimental
    functionality now.

- sqlite
  - [feature] the SQLite date and time types
    have been overhauled to support a more open
    ended format for input and output, using
    name based format strings and regexps.  A
    new argument "microseconds" also provides
    the option to omit the "microseconds"
    portion of timestamps.  Thanks to
    Nathan Wright for the work and tests on
    this.  [ticket:2363]

- mssql
  - [feature] SQL Server dialect can be given
    database-qualified schema names,
    i.e. "schema='mydatabase.dbo'"; reflection
    operations will detect this, split the schema
    among the "." to get the owner separately,
    and emit a "USE mydatabase" statement before
    reflecting targets within the "dbo" owner;
    the existing database returned from
    DB_NAME() is then restored.

  - [bug] removed legacy behavior whereby
    a column comparison to a scalar SELECT via
    == would coerce to an IN with the SQL server